<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/compScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:text="@string/computer_score_default"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yourScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:text="@string/your_score_default"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/roundsEl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLayout"
        app:layout_constraintVertical_bias="0.509" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/gameStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/roundsEl">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:cardCornerRadius="100dp"
            app:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/compChoiceImg"
                android:layout_width="130dp"
                android:layout_height="130dp"

                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/versus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:text="@string/press_any"
            android:textAlignment="center"
            android:textSize="34sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/userChoiceImg"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:rotation="180"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/rockButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/rock_button"
            android:padding="20dp"
            android:rotation="270"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/rock"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/paperButton"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/paper_button"
            android:padding="20dp"
            android:rotation="270"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/paper"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/scissorButton"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/scissor_button"
            android:padding="20dp"
            android:rotation="270"
            android:scaleType="centerCrop"
            android:src="@drawable/scissor"
            tools:ignore="RedundantDescriptionCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>