<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gameheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/amiko"
        android:text="Rock Paper Scissor"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/nameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameheading">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/amiko"
            android:text="@string/nameInput"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/default_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColorHint="#00838F" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/roundContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameContainer">

        <TextView
            android:id="@+id/roundsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/amiko"
            android:text="@string/set_rounds"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/roundInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/default_rounds"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAlignment="center"
            android:textColorHint="#00838F" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundContainer"
        app:layout_constraintVertical_bias="0.291">

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/play_button_image_des"
            android:onClick="playGame"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/playimg"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

        <Button
            android:id="@+id/gameStatsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/amiko"
            android:onClick="gameStats"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="Game STATS"
            android:textStyle="bold" />

        <Button
            android:id="@+id/aboutGameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/amiko"
            android:onClick="aboutGameIntent"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="About Game"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>